--- a/latorre-bio.html
+++ b/latorre-bio.html
@@ -4,9 +4,17 @@
 <meta charset="utf-8">
 <title>lindseylatorre-bio</title>
 </head>
+<h1>Lindsey Latorre's Biography</h1>
 <body>
     My name is Lindsey Latorre. I am double-majoring in Real Estate and Finance, interested in expanding my knowledge on the world of residential and commercial real estate and their affiliation with the financial sector. 
 I am exceptionally skilled in customer service and sales. I am proficient in Spanish, CAD, and Solidworks. 
-I enjoy being outdoors and on the water. I love boating, jet skiing, fishing, and four-wheeling. My favorite shows are Jeopardy!, Selling Sunset, and Money Heist. My favorite movie is The Hateful Eight. 
+I enjoy being outdoors and on the water. I love boating, jet skiing, fishing, and four-wheeling. My favorite movie is The Hateful Eight. My favorite shows are the following:
+<ul>
+    <li>Selling Sunset</li>
+    <li>Jeopardy!</li>
+    <li>Money Heist</li>
+</ul>
+<hr>
+&copy;
 </body>
 </html>
