--- a/lab02/latorre-bio.html
+++ b/lab02/latorre-bio.html
@@ -8,8 +8,8 @@
 <body>
     My name is Lindsey Latorre. I am double-majoring in Real Estate and Finance, interested in expanding my knowledge on the world of residential and commercial real estate and their affiliation with the financial sector. 
 I am exceptionally skilled in customer service and sales. I am proficient in Spanish, CAD, and Solidworks. 
-I enjoy being outdoors and on the water. I love boating, jet skiing, fishing, and four-wheeling. My favorite movie is The Hateful Eight. 
-<ul>My favorite shows are the following:
+I enjoy being outdoors and on the water. I love boating, jet skiing, fishing, and four-wheeling. My favorite movie is The Hateful Eight. My favorite shows are the following:
+<ul>
     <li>Selling Sunset</li>
     <li>Jeopardy!</li>
     <li>Money Heist</li>
