--- a/latorre-bio.html
+++ b/latorre-bio.html
@@ -8,7 +8,7 @@
     <h1>Lindsey Latorre's Biography</h1>
     <p>My name is Lindsey Latorre. I am double-majoring in Real Estate and Finance, interested in expanding my knowledge on the world of residential and commercial real estate and their affiliation with the financial sector. </p>
 <p>I am exceptionally skilled in customer service and sales. I am proficient in Spanish, CAD, and Solidworks. </p>
-<p>I enjoy being outdoors and on the water. I love boating, jet skiing, fishing, and four-wheeling. My favorite movie is The Hateful Eight. My favorite shows are the following:</p>
+<p>I enjoy being outdoors and on the water. I <strong>love</strong> boating, jet skiing, fishing, and four-wheeling. My favorite movie is The Hateful Eight. My favorite shows are the following:</p>
 <ul>
     <li>Selling Sunset</li>
     <li>Jeopardy!</li>
