--- a/lab05/latorre-bio.html
+++ b/lab05/latorre-bio.html
@@ -10,6 +10,7 @@
 <h2>Personal Information</h2>
     <p>I am exceptionally skilled in customer service and sales. I am proficient in Spanish, CAD, and Solidworks. </p>
 <p>I enjoy being outdoors and on the water. I <strong>love</strong> boating, jet skiing, fishing, and four-wheeling. My favorite movie is The Hateful Eight. My favorite shows are the following:</p>
+<p><img src="../images/profphotoshop.jpg" alt="linkedin logo"></p>
 <ul>
     <li>Selling Sunset</li>
     <li>Jeopardy!</li>
